--- a/aaronalcaide.me/almairreal.html
+++ b/aaronalcaide.me/almairreal.html
@@ -1,11 +1,14 @@
 <!DOCTYPE HTML>
 
+
 <html>
 	<style>
 
+	h2 a {
+		text-decoration: underline;
+	}
 
 	</style>
-
 
 	<head>
 		<title>Aarón Alcaide</title>
